# sqlx-example

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20231122042309_init.up.sql
src/: main.rs
