[package]
name = "sqlx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.29"
rand = "0.8.5"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
